# CppML

./: CMakeLists.txt  run.bat  run.sh
include/: ETL.hpp
include/etl/: ETL.hpp  winedata_etl.hpp
include/linear_regression/: LinearRegression.hpp
py_compare/: log_reg.ipynb
src/: ETL.cpp  main.cpp
src/etl/: ETL.cpp  winedata_etl.cpp
src/linear_regression/: LinearRegression.cpp
tests/: test_main.cpp
tests/etl/: test_winedata_etl.cpp
